--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <span><h1><em>Adonai Junior</em></h1></span>
     <br/>
     <br/>
-    <div id="foto"> <img src="https://scontent-gru1-1.xx.fbcdn.net/v/t1.6435-9/48208582_1824286187670410_7913422426212401152_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=174925&_nc_ohc=9PykLHLFjG4AX8QSw4C&_nc_ht=scontent-gru1-1.xx&oh=00_AT9cMY5TMw0Bb36TTPI5qYan1RqcEJL_BC_i_Uj2KLe8PQ&oe=6253BBB4"> </div>
+    <div id="foto"> <img src="https://avatars.githubusercontent.com/u/90911791?s=400&u=c2a72173d09cda9162a7df1d072e3af03318ad53&v=4"> </div>
     <br/>
     <br/>
       <div id="social"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
