--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <span><h1><em>Adonai Junior</em></h1></span>
     <br/>
     <br/>
-    <div id="foto"> <img src="https://avatars.githubusercontent.com/u/90911791?s=400&u=c2a72173d09cda9162a7df1d072e3af03318ad53&v=4"> </div>
+    <div id="foto"> <img src="https://avatars.githubusercontent.com/u/90911791?s=400&u=c2a72173d09cda9162a7df1d072e3af03318ad53&v=4" alt='foto de perfil'> </div>
     <br/>
     <br/>
       <div id="social"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
